--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #spring.datasource.password=
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.h2.console.enabled=true
-
+spring.profiles.active=dev
 spring.datasource.url=jdbc:h2:mem:markJoulnal
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
