jwt only for user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,6 @@ springdoc.swagger-ui.path=/swagger-ui/index.html
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.path=/v3/api-docs
 
+spring.security.user.name = mike
+spring.security.user.password = mike123
 #http://localhost:8080/swagger-ui/swagger-ui/index.html#/
