--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,7 +5,7 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/markJoulnal
 spring.datasource.username=postgres
-spring.datasource.password=your_password
+spring.datasource.password=2715s
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
